fix the mockup image overflow

--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,14 @@
 }
 
 body {
-	position: relative;
 	font-family: var(--ff);
 	background-color: var(--white);
 	font-size: 1.125rem;
 	line-height: 1.5;
 	text-align: center;
-	z-index: 10;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
 }
 
 ul {
@@ -161,7 +162,7 @@ p {
 /* navbar */
 #nav {
 	background-color: var(--white);
-	padding: 1rem 1.8rem;
+	padding: 1rem;
 	margin: 0 auto;
 	max-width: 1440px;
 }
@@ -364,8 +365,7 @@ p {
 		max-height: 70vh;
 		max-width: 30rem;
 		top: -3.5rem;
-		left: 9rem;
-		/* z-index: -10; */
+		left: 9.6rem;
 		order: 3;
 	}
 }
@@ -417,7 +417,7 @@ p {
 		background-color: var(--light-grayish-blue);
 		position: relative;
 		z-index: -20;
-		padding: 3.5rem 7rem;
+		padding: 3.5rem 5.5rem;
 	}
 
 	.article {
@@ -546,7 +546,7 @@ p {
 @media screen and (min-width: 992px) {
 	#footer {
 		height: 13rem;
-		padding: 3.5rem 7rem;
+		padding: 3.5rem 5.5rem;
 		max-height: 25rem;
 		display: flex;
 		align-items: stretch;
